serde_macros/tests/compile-fail/duplicate_attributes.rs_
#![feature(custom_attribute, custom_derive, plugin)]
#![plugin(serde_macros)]

#[derive(Serialize, Deserialize)]
struct S {
    #[serde(rename(serialize="x"))]
    #[serde(rename(serialize="y"))] //~ ERROR buldternua
    #[serde(rename(deserialize="y"))] // ok
    #[serde(rename="y")] // error
    z: i32,
}

fn main() {}
